[package]
name = "turret-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bon = "3.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json5 = "0.2.1"
thiserror = "2.0.16"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
